--- a/package.json
+++ b/package.json
@@ -8,6 +8,19 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "nuxt": "^3.1.2"
+    "@nuxtjs/eslint-config": "^12.0.0",
+    "@nuxtjs/i18n": "^8.0.0-beta.9",
+    "@nuxtjs/tailwindcss": "^6.3.1",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
+    "eslint": "^8.33.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-nuxt": "^4.0.0",
+    "eslint-plugin-vue": "^9.9.0",
+    "eslint-utils": "^3.0.0",
+    "nuxt": "^3.1.2",
+    "sass": "^1.58.0",
+    "sass-loader": "^13.2.0",
+    "typescript": "^4.9.5"
   }
 }
