--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "sass": "^1.58.0",
     "sass-loader": "^13.2.0",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "@vueuse/nuxt": "^9.12.0",
+    "vue-countup-v3": "^1.1.0"
   }
 }
