--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxt/content": "^2.5.2",
     "@nuxtjs/eslint-config": "^12.0.0",
     "@nuxtjs/i18n": "^8.0.0-beta.9",
     "@nuxtjs/tailwindcss": "^6.3.1",
@@ -18,7 +19,7 @@
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-vue": "^9.9.0",
     "eslint-utils": "^3.0.0",
-    "nuxt": "^3.1.2",
+    "nuxt": "^3.3.1",
     "sass": "^1.58.0",
     "sass-loader": "^13.2.0",
     "typescript": "^4.9.5"
