--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.0",
+    "@vuelidate/validators": "^2.0.0",
     "@vueuse/nuxt": "^9.12.0",
     "swiper": "^9.1.1",
     "vue-countup-v3": "^1.1.0"
