--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -32,4 +32,4 @@ jobs:
         username: ${{ secrets.DEV_FTP_USERNAME }}
         password: ${{ secrets.DEV_FTP_PASSWORD }}
         server-dir: /
-        local-dir: ./.output/public
+        local-dir: ./.output/public/
