--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -24,6 +24,7 @@ jobs:
       run: |
         yarn install
         yarn build
+        yarn generate
     
     - name: Deploy over FTP
       uses: SamKirkland/FTP-Deploy-Action@4.3.3
@@ -32,4 +33,4 @@ jobs:
         username: ${{ secrets.DEV_FTP_USERNAME }}
         password: ${{ secrets.DEV_FTP_PASSWORD }}
         server-dir: /
-        local-dir: ./.output/public/
+        local-dir: ./dist/
