--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@nuxt/content": "^2.5.2",
     "@nuxtjs/eslint-config": "^12.0.0",
     "@nuxtjs/i18n": "^8.0.0-beta.9",
-    "@nuxtjs/tailwindcss": "^6.3.1",
+    "@nuxtjs/tailwindcss": "6.8.0",
     "@types/node": "^18.15.10",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
@@ -29,8 +29,8 @@
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
     "@vueuse/nuxt": "^9.12.0",
-    "postcss-custom-properties": "^13.3.1",
     "swiper": "^9.1.1",
+    "unstorage": "^1.9.0",
     "vue-countup-v3": "^1.1.0"
   }
 }
